--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                     <button id="bulk-edit-btn" class="hidden btn-primary bg-yellow-500 hover:bg-yellow-600">Bulk Edit</button>
                 </div>
                 <div class="flex items-center gap-4">
+                     <a href="https://vim.bgcharlem.org" class="nav-btn bg-purple-600 hover:bg-purple-700">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
+                        </svg>
+                        <span>Visual Inventory</span>
+                    </a>
                      <div id="loading-indicator" class="hidden items-center gap-2 text-gray-600">
                         <div class="loader !w-5 !h-5"></div>
                         <span>Syncing...</span>
@@ -50,7 +56,6 @@
                     <button id="inventory-tab" class="whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm text-gray-500 hover:text-gray-700 hover:border-gray-300">Inventory</button>
                     <button id="overview-tab" class="whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm text-gray-500 hover:text-gray-700 hover:border-gray-300">Overview</button>
                     <button id="employees-tab" class="whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm text-gray-500 hover:text-gray-700 hover:border-gray-300">Employees</button>
-                    <a href="https://vim.bgcharlem.org" target="_blank" rel="noopener noreferrer" class="whitespace-nowrap py-4 px-1 border-b-2 border-transparent font-medium text-sm text-gray-500 hover:text-indigo-600 hover:border-gray-300">Visual Inventory</a>
                 </nav>
             </div>
 
